# sugarscape

./: .gitignore  CLAUDE.md  COMMAND_LINE_GUIDE.md  README.md  VLLM_INTEGRATION.md  changelog_claude_20260122.md  changelog_gpt_20260123.md  debug_api.py  env.example  experiment_plan.md  monitor_experiment.sh  monitor_harsh.sh  pyproject.toml  recent_exps.txt  requirements-sugarscape.txt  requirements.txt  run_all_parallel.sh  run_experiments.sh  run_limited_parallel.sh  test_aihubmix.py  test_openrouter_models.py
.trae/documents/: Add Environment Variant Support to CLI.md  Create 2025 SOTA Experiment Configurations.md  Create Scaling Experiments Script.md  Create Standard Experiment Configurations.md  Implement CLI Arguments for Sugarscape Runner.md  Implement Hidden Thinking for OpenRouter Models.md  Implement LLM Agents for Sugarscape.md  Persona 参数与实验设计合理性审核报告.md  优化参数以增强幂律分布特征.md  (+9 more)
animation/: generate_offline_data.py  render_offline_video.py
experiments/: run_scaling_experiments.py  run_wolf_sheep_experiments.py
redblackbench/: __init__.py  cli.py
results/: .gitkeep
scripts/: analyze_comprehensive.py  analyze_formal_experiments.py  analyze_sugarscape_deep.py  compare_environment_harshness.py  compare_trade_effect.py  compare_welfare.py  deep_dive_conservative.py  deep_dive_metabolism.py  openrouter_thinking_test.py  pareto_check.py  plot_existing.py  plot_moral_comparison.py  plot_moral_histogram.py  plot_moral_time_wealth.py  plot_wealth_moral.py  run_batch_comparison.py  run_goal_experiment.py  run_goal_experiment_sft.py  run_persona_controlled.py  run_persona_distribution_sweep.py  run_persona_experiment.py  run_powerlaw_experiment.py  run_sugarscape.py  run_sugarscape_loadbalanced.py  run_table3_parallel.py  setup_and_run.sh  test_welfare_system.py  visualize_sugarscape.py
tests/: __init__.py  test_agents.py  test_e2e_mock_llm.py  test_game.py  test_resume.py  test_scoring.py  test_trade_dialogue.py  test_trajectory.py
(+280 files in other folders)
